<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/bg_grey">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/rst_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/rst_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/rst_verify_code"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:background="@drawable/shape_form" />

                <TextView
                    android:id="@+id/rst_send_code"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/rst_send_code"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_verify_btn_normal"/>

            </LinearLayout>

            <EditText
                android:id="@+id/rst_new_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/rst_new_password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/rst_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/rst_password_confirm"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/rst_confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:text="@string/confirm"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:background="@drawable/shape_btn"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>