<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey">

    <ImageView
        android:id="@+id/login_app"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/red_heart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/login_user"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:singleLine="true"
                android:hint="@string/login_account"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/login_psd"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_btn"
        android:layout_below="@id/login_ll"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/login_title"
        android:textSize="15sp"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_login"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/loginToReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_reg"
            android:textSize="14sp"
            android:textColor="@color/deepgrey"/>
        <TextView
            android:id="@+id/loginToRst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_rst"
            android:textSize="14sp"
            android:textColor="@color/deepgrey"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</RelativeLayout>
