<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xh.sun.ui.user.ProfileActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/bg_grey">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profile_header_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_header_view"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"/>
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/profile_header_view"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:roundAsCircle="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_grey"/>
            <RelativeLayout
                android:id="@+id/profile_nickname_rl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/profile_nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_nickname"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/profile_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="无"
                    android:textSize="15sp"
                    android:textColor="@color/deepgrey"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/profile_nickname_tv"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_grey"/>
            <RelativeLayout
                android:id="@+id/profile_sex_rl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/profile_sex_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_sex"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/profile_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="男"
                    android:textSize="15sp"
                    android:textColor="@color/deepgrey"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/profile_sex_tv"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/profile_phone_number_rl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/profile_phone_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/profile_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="无"
                    android:textSize="15sp"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/profile_phone_number_tv"
                    android:layout_marginLeft="20dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_grey"/>
            <RelativeLayout
                android:id="@+id/profile_rstpsd_rl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rst_title"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/in"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/profile_logout"
                android:textSize="15sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
